--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -9,9 +9,28 @@
 
   body{
     background-color: var(--section-bg);
+    margin: 0;
+    padding: 0;
+
   }
   
+  #nav-import {
+    margin-bottom: 0;
+}
+#nav-import nav.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1030;
+  background-color: #fff; /* lub Twój kolor */
+}
   .navbar {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 1030; /* Wyżej niż wszystko inne */
+    
     background-color: var(--background);
     box-shadow: 0 2px 6px rgb(0 0 0 / 0.1);
     padding: 1rem 2rem;
@@ -21,7 +40,7 @@
     color: var(--brand-color);
     font-weight: 700;
     font-size: 1.8rem;
-    letter-spacing: 1px;
+    
     text-transform: uppercase;
     transition: color 0.3s ease;
   }
@@ -112,5 +131,10 @@
   margin-right: -50vw;
   background-color: #fdf8ef;
   padding: 2rem 0;
+}
+
+.nav-link.active {
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 
