--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -15,8 +15,33 @@
     background-color: var(--section-bg);
     margin: 0;
     padding: 0;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 
   }
+
+  body.fade-in {
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+  }
+  
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
+  
+  body.fade-out {
+    opacity: 1;
+    animation: fadeOut 0.5s forwards;
+  }
+  
+  @keyframes fadeOut {
+    to {
+      opacity: 0;
+    }
+  }
+  
   
   #nav-import {
     margin-bottom: 0;
