--- a/styles/main_style.css
+++ b/styles/main_style.css
@@ -13,7 +13,7 @@
   }
   body{
     background-color: var(--section-bg);
-    margin: 0;
+    
     padding: 0;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
@@ -22,6 +22,8 @@
 
   body.fade-in {
     opacity: 0;
+    /*position: relative; */
+    z-index: 0; /* niech nie wchodzi przed sticky */
     animation: fadeIn 0.5s forwards;
   }
   
@@ -42,16 +44,17 @@
     }
   }
   
+#nav-import {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
   
-  #nav-import {
-    margin-bottom: 0;
-}
-#nav-import nav.navbar {
-  position: sticky;
-  top: 0;
-  z-index: 1030;
-  background-color: #fff; /* lub Twój kolor */
-}
+  #nav-import nav.navbar {
+    position: sticky !important;
+    top: 0 !important;
+    z-index: 2000 !important;
+    background-color: #fff;
+  }
   .navbar {
     position: relative;
     top: 0;
@@ -120,6 +123,9 @@
 
 .hero-section {
   background-color: #fdf8ef;
+  
+    padding-top: 100px; /* albo 5rem */
+  
 }
 
 
@@ -161,7 +167,7 @@
   margin-left: -50vw;     /* wyciąga na pełną szerokość */
   margin-right: -50vw;
   background-color: #fdf8ef;
-  padding: 2rem 0;
+  /*padding: 2rem 0;*/
 }
 
 .nav-link.active {
@@ -194,4 +200,17 @@
 
 .highlight {
   color: var(--brand-color);
+}
+
+
+
+.social-icon {
+  margin: 0 20px;
+  display: inline-block;
+  transition: transform 0.35s cubic-bezier(0.34, 2, 0.9, 1);
+  will-change: transform;
+}
+
+.social-icon:hover {
+  transform: scale(1.35);
 }
