--- a/styles/offer.css
+++ b/styles/offer.css
@@ -114,6 +114,18 @@
     transition: opacity 0.4s ease-out;
   }
 
+  #maskotkaDetail {
+    transition: opacity 0.4s ease-in-out;
+  }
+  
+  #maskotkaDetail.fade-out {
+    opacity: 0;
+  }
+  
+  #maskotkaDetail.fade-in {
+    opacity: 1;
+  }
+
 
     #fotobudkaCarousel {
     height: 400px; /* wysokość pierwszego obrazka – dopasuj do swojego */
